Bug 410567 - Anti-aliasing settings have no effect on rectangle selections (antialiasing is always on)
Summary: Anti-aliasing settings have no effect on rectangle selections (antialiasing i...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-04 11:31 UTC by Karl Ove Hufthammer
Modified: 2020-08-08 13:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2019-08-04 11:31:03 UTC
SUMMARY
Disabling anti-aliasing for rectangle selections don’t work. That is, even if the ‘Anti-aliasing’ checkbox is disabled, anti-alising is used on the resulting selection.

STEPS TO REPRODUCE
1. Open an existing image.
2. Select the rectangle selection tool.
3. Set the ‘Round X’ and ‘Round Y’ to 150 px (or a different large value).
4. Ensure that the ‘Mode’ is set to ‘Pixel Selection’ and that ‘Anti-aliasing’ is *disabled*.
5. Draw a selection rectangle.
6. Change the selection display mode to ‘Mask’ (icon in bottom left-hand corner).
7. Zoom in one of the corners of the selection mask.

OBSERVED RESULT
The corners of the selection mask is smooth, indicating anti-aliasing.

EXPECTED RESULT
The corners of the selection mask should be have a clear/pixelated boundary between selected and non-selected pixels.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20190730
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Kernel Version: 5.2.3-1-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-2500 CPU @ 3.30GHz
Memory: 15,6 GiB

ADDITIONAL INFORMATION
For the other selection tools, e.g. the circle selection, disabling anti-aliasing works correctly.
Comment 1 wolthera 2020-08-08 13:42:09 UTC
Git commit 83cc20ca969717526284aff889f29eea7b382d7a by Wolthera van Hövell tot Westerflier.
Committed on 08/08/2020 at 13:41.
Pushed by woltherav into branch 'master'.

Enable antialiasing properly for rectangle select.

M  +1    -1    plugins/tools/selectiontools/kis_tool_select_rectangular.cc
M  +1    -0    plugins/tools/selectiontools/kis_tool_select_rectangular.h

https://invent.kde.org/graphics/krita/commit/83cc20ca969717526284aff889f29eea7b382d7a
Comment 2 wolthera 2020-08-08 13:42:54 UTC
Git commit e5e1b82752f9c3999ecc99c8bd5656dcdf2bdc51 by Wolthera van Hövell tot Westerflier.
Committed on 08/08/2020 at 13:42.
Pushed by woltherav into branch 'krita/4.3'.

Enable antialiasing properly for rectangle select.

M  +1    -1    plugins/tools/selectiontools/kis_tool_select_rectangular.cc
M  +1    -0    plugins/tools/selectiontools/kis_tool_select_rectangular.h

https://invent.kde.org/graphics/krita/commit/e5e1b82752f9c3999ecc99c8bd5656dcdf2bdc51