Enable antialiasing properly for rectangle select.

BUG:410567